# AudioVideoProject

./: WriteMe.txt  build.gradle  gradle.properties  settings.gradle  仿抖音实现效果.txt
app/: build.gradle
app/src/androidTest/java/com/bonade/fakedouyin/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/wyman/fakedouyin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/bonade/fakedouyin/: BaseActivity.kt  GridAdapter.java  MainActivity.java  MyApplication.kt  (+1 more)
app/src/main/res/drawable/: circle_point.xml
app/src/main/res/layout/: activity_camera.xml  activity_chossicemusic.xml  activity_test.xml  content_main.xml  grid_item.xml  swipe_layout.xml  view_drag_helper_act_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
cameralibrary/: build.gradle
cameralibrary/src/main/: AndroidManifest.xml
cameralibrary/src/main/res/values/: strings.xml
filterlibrary/: build.gradle
filterlibrary/src/main/: AndroidManifest.xml
filterlibrary/src/main/res/values/: strings.xml
gdxlibrary/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
medialibrary/: build.gradle
medialibrary/src/main/: AndroidManifest.xml
medialibrary/src/main/cpp/: CMakeLists.txt
medialibrary/src/main/cpp/SoundTouch/: CMakeLists.txt
medialibrary/src/main/cpp/SoundTouch/android/: com_wyman_media_SoundTouch.cpp
medialibrary/src/main/res/values/: strings.xml
utillibrary/: build.gradle
utillibrary/src/main/: AndroidManifest.xml
utillibrary/src/main/res/values/: strings.xml
(+192 files in other folders)
